Updated swagger definition to new ER Diagram
